# thala

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEBASE_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  NOTICE  README.md  SECURITY.md  WORKFLOW.md  build.rs  clippy.toml  cqp62v2pgvovusn7qcvfjbvahsvisheh.darc  docker-compose.yml  manifest
.beads/: config.yaml  issues.jsonl  metadata.json
.githooks/: pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/codeql/: codeql-config.yml
.github/workflows/: README.md  checks-on-pr.yml  ci-run.yml  master-branch-flow.md  release.yml
cloudflare/control-plane/: Dockerfile  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc  wrangler.test.jsonc
dev/: README.md  ci.sh  cli.sh  config.template.toml  docker-compose.ci.yml  docker-compose.yml  recompute_contributor_tiers.sh  setup.sh  test-termux-release.sh
dev/docker/: Dockerfile  Dockerfile.ci  Dockerfile.debian  Dockerfile.debian.ci  Dockerfile.worker  worker-entrypoint.sh
dev/infra/: discord_router.py  modal_worker.py  thala-discord-router.service
dev/scripts/: install-hooks.sh
docs/: QUICKSTART.md  README.md  SETUP_DISCORD_MODAL.md  SUMMARY.md  THALA_SETUP.md  cloudflare-backend.md  kubernetes-backend.md
docs/contributing/: actions-source-policy.md  cargo-slicer-speedup.md  change-playbooks.md  ci-map.md  cla.md  custom-providers.md  extension-examples.md  langgraph-integration.md  pr-discipline.md  pr-workflow.md  release-process.md  reviewer-playbook.md  testing-telegram.md  testing.md
docs/maintainers/: MAINTAINERS.md  README.md  trademark.md
docs/ops/: README.md  network-deployment.md  operations-runbook.md  proxy-agent-playbook.md  resource-limits.md  troubleshooting.md
docs/security/: agnostic-security.md  audit-logging.md  frictionless-security.md  matrix-e2ee-guide.md  sandboxing.md  security-roadmap.md
docs/setup-guides/: README.md  README.vi.md  macos-update-uninstall.md  mattermost-setup.md  nextcloud-talk-setup.md  one-click-bootstrap.md  zai-glm-setup.md
examples/: WORKFLOW.md
examples/kubernetes/: thala-orchestrator.yaml
scripts/: env.sh  export-secrets.sh  quick-onboard.sh  setup-cloudflare-tunnel.sh  setup-discord-modal.sh  setup-domain-https.sh  start-thala.sh
src/: lib.rs  main.rs  onboard_wizard.rs
src/adapters/: mod.rs
src/core/: error.rs  events.rs  ids.rs  interaction.rs  mod.rs  run.rs  state.rs  task.rs  transitions.rs  validation.rs  workflow.rs
src/orchestrator/: callback_server.rs  dispatcher.rs  engine.rs  human_loop.rs  mod.rs  monitor.rs  prompt_builder.rs  reconciler.rs  scheduler.rs  validator.rs
src/ports/: backend_router.rs  execution.rs  interaction.rs  mod.rs  repo.rs  state_store.rs  task_sink.rs  task_source.rs  validator.rs
tests/: test_component.rs  test_integration.rs  test_live.rs  test_system.rs
tests/component/: adapter_tests.rs  core_tests.rs  mod.rs  port_tests.rs
tests/integration/: mod.rs  (+1 more)
tool_descriptions/: en.toml
(+51 files in other folders)
