[workspace]
members = ["."]
resolver = "2"

[package]
name = "thala"
version = "0.1.0"
edition = "2021"
authors = ["Thala Contributors"]
license = "MIT"
description = "Thala — an opinionated orchestration kernel for managed coding tasks."
repository = "https://github.com/oswfrans/thala"
readme = "README.md"
keywords = ["ai", "agent", "orchestrator"]
categories = ["command-line-utilities"]
rust-version = "1.92"
include = [
  "/src/**/*",
  "/Cargo.toml",
  "/Cargo.lock",
  "/AGENTS.md",
  "/examples/WORKFLOW.md",
  "/LICENSE",
  "/README.md",
]

[[bin]]
name = "thala"
path = "src/main.rs"

[lib]
name = "thala"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.52", default-features = false, features = [
  "rt-multi-thread", "macros", "time", "net", "io-util", "sync",
  "process", "io-std", "fs", "signal",
] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = [
  "json", "rustls-tls", "stream",
] }

# HTTP server (webhook callbacks)
axum = { version = "0.8", default-features = false, features = [
  "http1", "json", "tokio", "query",
] }
tower = { version = "0.5", default-features = false }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde_yaml = "0.9"
toml = "1.0"

# Config / paths
directories = "6.0"
shellexpand = "3.1"

# Logging
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt", "ansi", "env-filter",
] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# UUID generation
uuid = { version = "1.23", default-features = false, features = ["v4", "std"] }

# Hashing (callback token)
sha2 = "0.11"
hex = "0.4"

# HMAC (webhook signature verification)
hmac = { version = "0.12", features = ["std"] }

# CSPRNG
rand = "0.10"

# Fast mutexes
parking_lot = "0.12"

# Async traits
async-trait = "0.1"

# Base64 (prompt encoding for remote backends)
base64 = "0.22"

# SQLite state store
rusqlite = { version = "0.37", features = ["bundled"] }

# Time
chrono = { version = "0.4", default-features = false, features = [
  "clock", "std", "serde",
] }

# Temp files
tempfile = "3.26"

# Regex (action ID parsing)
regex = "1.10"

# Glob pattern matching (protected_paths in merge policy)
globset = "0.4"

# Tera template engine (worker prompt rendering from WORKFLOW.md)
tera = { version = "1", default-features = false }

# Ed25519 signature verification (Discord interaction webhooks)
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }

# Unix
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.26"
wiremock = "0.6"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-fast]
inherits = "release"
codegen-units = 8

[profile.ci]
inherits = "release"
lto = "thin"
codegen-units = 16
